fixing running errors for windows machins and making .exe file